--- a/pytask.cfg
+++ b/pytask.cfg
@@ -1,8 +1,11 @@
 [ls]
 format = ID Project Bug_ID Status Description
 
-[report]
+[default_report]
 date_format = %Y/%m/%d
 time_format = %H:%M
 format = ID Project Bug_ID Description Duration
 detail_format = ID Bug_ID Description Start End Duration
+
+[report]
+section = default_report
